P4_firewall/etc/iptables.rules
# Generated by xtables-save v1.8.2 on Tue Nov 12 23:17:40 2019
*filter
:INPUT DROP [100:17580]
:FORWARD DROP [3054:216642]
:OUTPUT DROP [1:54]
-A INPUT -s 192.168.10.0/24 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -d 10.0.10.1/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -s 192.168.40.147/32 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -d 192.168.40.147/32 -p udp -m udp --sport 53 -j ACCEPT
-A FORWARD -s 192.168.10.0/24 -p udp -j ACCEPT
-A FORWARD -s 192.168.10.0/24 -p icmp -j ACCEPT
-A OUTPUT -s 192.168.40.147/32 -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Tue Nov 12 23:17:40 2019
# Generated by xtables-save v1.8.2 on Tue Nov 12 23:17:40 2019
*nat
:PREROUTING ACCEPT [3679:279939]
:INPUT ACCEPT [21:4208]
:POSTROUTING ACCEPT [19:1308]
:OUTPUT ACCEPT [145:11136]
-A POSTROUTING -o enp0s3 -j MASQUERADE
COMMIT
# Completed on Tue Nov 12 23:17:40 2019
